# stopANDshop

./: README.md  requirements.md
back_end/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
back_end/api/: admin.py  models.py  serializers.py  urls.py  views.py
back_end/api/migrations/: 0001_initial.py  0002_auto_20201016_1758.py
back_end/stop_and_shop_back/: asgi.py  sample.env  settings.py  urls.py  wsgi.py
front_end/gui/: package-lock.json  package.json
front_end/gui/src/: App.js  index.js
front_end/gui/src/components/: Footer.js  Header.js  login.js  service.js  serviceLoading.js
front_end/gui/src/css/: style.css
